<resources>
    <string name="app_name">exercise5</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing Timetable</string>

    <string name="arrival_time">Arrival Time</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="quit">Quit</string>
    <string name="destination_time">Destination Time</string>
    <string name="destination">Desintation</string>
    <string name="status">status</string>
    <string name="platform">platform</string>
    <string name="on_time">on-time</string>
    <string name="late">late</string>



</resources>
