<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"

        />

    <item android:id="@+id/add"
        android:title="@string/add"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"

        />

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"

        />



    <item android:id="@+id/delete_all"
        android:title="@string/delete_all"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"


        />


    <item android:id="@+id/quit"
        android:title="@string/quit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"

        />





</menu>
