<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/parent"
    >

    <LinearLayout
        android:id="@+id/left_pane"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="arrival_time"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            />


    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/middle_pane"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_time"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/right_pane"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="right"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_time"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            />



    </LinearLayout>

</RelativeLayout>